<resources>
    <string name="app_name">vMarketPlace</string>
    <string name="published_by_me">Published By Me</string>
    <string name="sold_by_me">Sold By Me</string>
    <string name="bought_by_me">Bought By Me</string>
    <string name="added_to_favorite">Added To Favorite</string>
    <string name="review_detail">Review Detail</string>
    <string name="publish_detail">Publish Detail</string>
    <string name="settings">Settings</string>
    <string name="hint_username">Username or Email</string>
    <string name="confirm_button">Log in</string>
    <string name="click"><![CDATA[>]]></string>
    <string name="second_hand">Second Hand</string>
    <string name="sublease">Sublease</string>
    <string name="rides">Rides</string>
    <string name="activities">Activities</string>
    <string name="close_btn">close</string>
    <string name="publish">Publish</string>
    <string name="write_post">Post</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Description for your post</string>
    <string name="post_contact_title">Your title</string>
    <string name="post_address">Address(optional)</string>
    <string name="post_phone">Phone Number(optional)</string>
    <string name="post_btn">Confirm</string>
    <string name="choose_from_album">Choose from album</string>
    <string name="use_camera">Use camera</string>
    <string name="close_popup">Cancel</string>
    <string name="fake_text">Besides finding the source of the issue, I found the solution. If android:inputType is used, then textMultiLine must be used to enable multi-line support. Also, using inputType supersedes the code android:singleLine="false". If using inputType, then, to reiterate, textMultiLine must be used or the EditText object will only consist of one line, without word-wrapping.</string>
    <string name="facebook_app_id">292014607986179</string>
    <string name="fb_login_protocol_scheme">fb292014607986179</string>
    <string name="add_more_image">Add more Image</string>
    <string name="action_profile">Check Profile</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">invalid_lat_long_used</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Stress Found</string>
    <string name="choose_location">Choose Location</string>
    <string name="title_not_empty">Title can\'t be empty</string>
    <string name="price_not_empty">Price can\'t be empty</string>
    <string name="publish_succuess">Published Successfully</string>
    <string name="home_toolbar_title">Home Page</string>
    <string name="search_title">Begin your search here</string>
    <string name="home_page_poster">Home page poster</string>
    <string name="profile_setting">Profile Setting</string>
</resources>
