<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_window_border"
    android:orientation="vertical">

    <TextView
        android:id="@+id/choose_from_album"
        android:text="@string/choose_from_album"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="4dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator"/>

    <TextView
        android:id="@+id/use_camera"
        android:text="@string/use_camera"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="4dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/separator"/>

    <TextView
        android:id="@+id/close_popup"
        android:text="@string/close_popup"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="4dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>