<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_title"
            android:inputType="textCapSentences"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/post_content"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="4"
            android:maxLength="2000"
            android:scrollHorizontally="false"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="@+id/post_title"
            app:layout_constraintStart_toStartOf="@+id/post_title"
            app:layout_constraintTop_toBottomOf="@+id/post_title"/>

        <GridLayout
            android:id="@+id/gridlayout_insert_point"
            app:layout_constraintStart_toStartOf="@+id/post_content"
            app:layout_constraintTop_toBottomOf="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </GridLayout>

        <ImageView
            android:id="@+id/add_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/gridlayout_insert_point"
            app:layout_constraintTop_toBottomOf="@+id/gridlayout_insert_point"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/add_image_dotted"
            android:contentDescription="@string/add_more_image" />

        <!--<ImageView-->
            <!--android:id="@+id/add_image_1"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_marginStart="0dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--app:layout_constraintStart_toStartOf="@+id/post_content"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/post_content"-->
            <!--app:srcCompat="@drawable/add_image_dotted" />-->

        <!--<ImageView-->
            <!--android:id="@+id/add_image_2"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_marginStart="0dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--app:layout_constraintStart_toEndOf="@+id/add_image_1"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/post_content"-->
            <!--app:srcCompat="@drawable/add_image_dotted" />-->

        <!--<ImageView-->
            <!--android:id="@+id/add_image_3"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_marginStart="0dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--app:layout_constraintStart_toEndOf="@+id/add_image_2"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/post_content"-->
            <!--app:srcCompat="@drawable/add_image_dotted" />-->

        <!--<ImageView-->
            <!--android:id="@+id/add_image_4"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_marginStart="0dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--app:layout_constraintStart_toEndOf="@+id/add_image_3"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/post_content"-->
            <!--app:srcCompat="@drawable/add_image_dotted" />-->

        <!--<ImageView-->
            <!--android:id="@+id/add_image_5"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_marginStart="0dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="@+id/add_image_1"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/add_image_1"-->
            <!--app:srcCompat="@drawable/add_image_dotted" />-->

        <!--<ImageView-->
            <!--android:id="@+id/add_image_6"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_marginStart="0dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--app:layout_constraintStart_toEndOf="@+id/add_image_5"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/add_image_1"-->
            <!--app:srcCompat="@drawable/add_image_dotted" />-->

        <!--<ImageView-->
            <!--android:id="@+id/add_image_7"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_marginStart="0dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--app:layout_constraintStart_toEndOf="@+id/add_image_6"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/add_image_1"-->
            <!--app:srcCompat="@drawable/add_image_dotted" />-->

        <!--<ImageView-->
            <!--android:id="@+id/add_image_8"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_marginStart="0dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--app:layout_constraintStart_toEndOf="@+id/add_image_7"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/add_image_1"-->
            <!--app:srcCompat="@drawable/add_image_dotted" />-->

        <ImageView
            android:id="@+id/add_location"
            android:layout_width="35dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/add_image"
            app:layout_constraintTop_toBottomOf="@+id/add_image"
            app:srcCompat="@drawable/ic_location" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/post_contact_title"
            android:inputType="textPersonName"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/add_location"
            app:layout_constraintTop_toBottomOf="@+id/add_location" />

        <EditText
            android:id="@+id/post_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/post_phone"
            android:inputType="phone"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="@+id/contact"
            app:layout_constraintTop_toBottomOf="@+id/contact" />

        <EditText
            android:id="@+id/post_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/post_address"
            android:inputType="textPostalAddress"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="@+id/post_phone"
            app:layout_constraintTop_toBottomOf="@+id/post_phone" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/post_btn"
            android:background="@color/confirm_button"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/post_address"
            app:layout_constraintTop_toBottomOf="@+id/post_address" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>