<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context="edu.virginia.cs.vmarketplace.view.PublishFormActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/separator"
        android:elevation="4dp"
        android:theme="@style/AppTheme.Message"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <Button
            android:id="@+id/close_btn"
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="@dimen/activity_horizontal_margin"
            android:background="@drawable/close_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="Publish"
            android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_below="@id/my_toolbar"
        android:layout_above="@id/buttom_bar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">
            <edu.virginia.cs.vmarketplace.view.MyEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:hint="@string/hint_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                app:backgroundTint="@color/separator"
                android:id="@+id/title"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_area"
                android:hint="@string/hint_content"
                android:layout_below="@id/title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:gravity="top"
                android:backgroundTint="@android:color/transparent"
                android:id="@+id/description"
                />
            <GridView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalSpacing="@dimen/button_margin"
                android:numColumns="4"
                android:layout_below="@id/description"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:id="@+id/container"></GridView>
            <RelativeLayout
                android:id="@+id/location_container"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_margin_large"
                android:layout_below="@id/container">
                <ImageView
                    android:id="@+id/location_logo"
                    android:gravity="center"
                    android:layout_width="@dimen/activity_horizontal_margin"
                    android:layout_height="@dimen/activity_horizontal_margin"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/location_black"/>
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_toRightOf="@+id/location_logo"
                    android:layout_marginLeft="@dimen/content_padding"
                    android:text="Loading"/>
            </RelativeLayout>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_margin"
            android:background="@color/separator">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height_small"
        android:background="@color/tan_background"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/content_padding"
            android:text="@string/post_btn"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_light"/>
    </LinearLayout>
</LinearLayout>
